chore: Refactor with tests and classes